Fri Jun 23 14:08:00 BST 2000 Olly Betts

	* Updated TODO

Thu Jun 22 15:01:00 BST 2000 Olly Betts

	* OM_DBTYPE_* now internal to database_manger.cc - use strings
	  elsewhere

	* Added "auto" database type which takes a directory and tries to
	  deduce what sort of database lives there

	* Moved file_exists() and files_exist() into utils.cc

Thu Jun 22 11:33:57 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* In Muscat36: throw exception if a keyfile is specified, but cannot
	  be opened.

Wed Jun 21 15:23:00 BST 2000 Olly Betts

	* apitest: if srcdir not set, sanity check our guess by seeing if
	  apitest.cc is there.

Wed Jun 21 15:35:58 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* In configure, actually try to link the test with the Dbt object
	  and db_cxx.h, to check that the library is properly installed.

Wed Jun 21 15:23:00 BST 2000 Olly Betts

	* Fixed bug in PhrasePostList; added regression test to apitest

	* Cleaned up PhrasePostList and NearPostList by eliminating PosList
	  and subclasses (added index member to PositionList instead)

Wed Jun 21 13:40:26 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

        * Add a --enable-quiet option to configure to turn off libtool
	  messages if they're not wanted.

	* Add a Dbt object to the test for db_cxx.h, to check that the
	  right library is being linked with.

	* Set datestamp in mkdoc.pl to consitent format with rest of
	  documentation.

Wed Jun 21 13:40:03 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Stoped the "undefined reference to SocketServer type_info node"
	  (or similar) linking errors with includetest.

Wed Jun 21 13:35:37 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* _Really_ stopped referring to OmSettings.

Tue Jun 20 18:27:55 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Stop compiling OmSettings in, at least for now.

Tue Jun 20 15:51:00 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
